# wapcaplet

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  ReadMe.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
include/wapcaplet/: wapcaplet.h
src/: wapcaplet.cpp
test/: CMakeLists.txt
test/src/: wapcaplet_test.cpp
